syntax = "proto3";

package proto.user.v1;

option go_package = "gilwong00/connect-chat/gen/proto/user/v1;userv1";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}


message GetUserRequest {

}

message GetUserResponse {

}

message CreateUserRequest {
	string username = 1;
	string email = 2;
	string password = 3;
}

message CreateUserResponse {
	int64 id = 1;
	string username = 2;
	string email = 3;
}